--- a/src/main/resources/templates/article_write.html
+++ b/src/main/resources/templates/article_write.html
@@ -14,7 +14,7 @@
             <!-- 이미지 첨부 -->
             </br><div class="form-floating mb-3">
                 <!-- 이미지 첨부 창 -->
-                <input type="file" name="files" class="form-control" id="files" multiple>
+                <input type="file" name="files" class="form-control" id="files" multiple accept=".png, .jpg">
                 <label for="files">이미지 업로드</label>
             </div>
             <!-- 태그 -->
