--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -79,37 +79,33 @@
     </div>
     <!-- 로그인/로그아웃 -->
     <div th:if="${endPage != 0}" th:id="'comment_'+${comment.id}" th:each="comment : ${comment}" class="article_comments" th:style="${comment.redepth != 0 ? ' padding-left: ' + comment.redepth * 40 + 'px' : ''} ">
-        <!-- 부모댓글이 삭제 상태가 아닌 경우 댓글 표시 -->
+        <!-- 댓글이 삭제 상태가 아닌 경우 댓글 표시 -->
         <div th:if="${comment.deleted == false }">
             <span th:if="${comment.parent != null}" class="bold"> ↪ </span>
-            <!-- 대댓글 작성자 -->
+            <!-- 댓글 작성자 -->
             <span class="bold" th:text="${comment.member.usernick}"></span>
             <span> · </span>
-            <!-- 대댓글 작성 시간 -->
+            <!-- 댓글 작성 시간 -->
             <span th:text="${@timeUtil.calculateTimeAgo(comment.createdDate)}"></span>
             <span> · </span>
             <!-- 댓글 삭제 버튼-->
             <span  sec:authorize="isAuthenticated()" class="comment_delete">
                 <button onclick="deleteComment(this.getAttribute('data-comment-id'))" th:attr="data-comment-id=${comment.id}" th:if="${comment.member.id == @authenticationUtil.getCurrentMember()?.id}">삭제</button>
             </span><br><br>
-
+            <!-- 깊이 표시 -->
             <div th:style="${comment.redepth != 0 ? 'padding-left: ' + comment.redepth * 10 + 'px;' + 'display:flex;' : ''} ">
-            <!-- 댓글 작성자 -->
-            <span th:if="${comment.parent != null}" style="color:#6c757d; margin:0 10px;" th:text="${comment.parent.member.usernick}"> </span>
-            <!-- 대댓글 내용 -->
-            <div th:text="${comment.content}"></div>
+                <!-- 상위 댓글 작성자 -->
+                <span th:if="${comment.parent != null}" style="color:#6c757d; margin:0 10px;" th:text="${comment.parent.member.usernick}"> </span>
+                <!-- 대댓글 내용 -->
+                <div th:text="${comment.content}"></div>
             </div>
             <!-- 답글 달기 버튼 -->
             <div th:style="${comment.redepth != 0 ? ' padding-left: ' + comment.redepth * 20 + 'px' : ''} ">
                 <button class="reply_button" th:id="'reply_button_' + ${comment.id}" onclick="replyButton(this.getAttribute('data-comment-id'))" th:attr="data-comment-id=${comment.id}">답글 달기</button>
             </div>
         </div>
-        <!-- 대댓글이 살아 있는 상태에서 댓글이 삭제 상태인 경우 삭제된 댓글 표시 -->
-        <div th:if="${comment.deleted == true and comment.parent == null}">
-            <div> 삭제된 댓글 입니다!</div>
-        </div>
-        <!-- 부모댓글이 살아 있는 상태에서 대댓글이 삭제 상태인 경우 삭제된 댓글 표시 -->
-        <div th:if="${comment.deleted == true and comment.parent != null}">
+        <!-- 댓글이 삭제 상태인 경우 삭제된 댓글로 표시 -->
+        <div th:if="${comment.deleted == true}">
             <div> 삭제된 댓글 입니다!</div>
         </div>
 
@@ -233,7 +229,7 @@
                      // 쪽지 보내기 클릭시
                      $('#open-message-btn').click(function() {
                           // 쪽지 보내기 창 열기
-                          window.open('/notes/new?id=' + [[${article.member.email}]], '쪽지 보내기', 'width=400,height=420');
+                          window.open('/notes/new?id=' + [[${article.member.email}]], '쪽지 보내기', 'width=400,height=420,resizable=no');
                      });
                 });
 
@@ -325,7 +321,7 @@
                             　　type:'post'
                             　　, contentType:'application/json'
                             　　, data: JSON.stringify(obj)
-                            　　, url: '/api/replys'
+                            　　, url: '/api/comments/replies'
                             　　, success: function(data) {
                                     window.location.href = '/articles/' + articleId;
                             　　}
